build: pin requirements to CUDA 12.1 compatible

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-transformers[torch]
-datasets
 matplotlib
 tqdm
 scikit-learn
-torchvision
+torch==2.3.1
+torchvision==0.18.1
+transformers
+datasets
